Update HTML to match figma (#352)
* Update HTML to match figma

* fix mobile

Co-authored-by: Hans Bergren <hansbergren@gmail.com>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,10 +3,204 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Welcome to PayID</title>
+  <meta name="viewport" content="width=device-width">
+  <title>PayID Server</title>
+  <link href='https://fonts.googleapis.com/css?family=Inter:400,700' rel='stylesheet' type='text/css'>
+  <style>
+    body {
+      min-height: 100vh;
+      background-color: #000E33;
+      color: #E2E8F0;
+      margin: 0px;
+      font-family: 'Inter', sans-serif;
+    }
+
+    .app {
+      padding: 40px;
+    }
+
+    h1 {
+      margin-top: 27px;
+      font-size: 40px;
+      font-weight: bold;
+      line-height: 150%;
+      color: #F7FAFC;
+      margin-bottom: 0px;
+    }
+
+    h1 > span {
+      background: linear-gradient(270deg, #00CAFF 0%, #0087FF 48.96%, #0044FF 100%);
+      background-clip: unset;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .flex-container {
+      display: flex;
+      margin-top: 27px;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .flex-content {
+      margin-right:56px;
+      display: none;
+      flex-direction: column;
+      justify-content: space-between;
+      padding-bottom: 102px;
+    }
+
+    a {
+      color: inherit;
+    }
+
+    .flex-link {
+      text-decoration: none;
+      border-radius: 10px;
+      font-weight: bold;
+      padding: 123px 25px 102px 25px;
+      color: #FFF;
+      font-size: 30px;
+      margin-right: 0px;
+      margin-bottom: 56px;
+      width: calc(100% - 50px);
+    }
+
+    .footer {
+      margin-top: 56px;
+    }
+
+    @media (min-width: 640px) {
+      .flex-link {
+        width: calc(65% - 50px);
+      }
+    }
+
+    @media (min-width: 768px) {
+      h1 {
+        font-size: 64px;
+      }
+      .app {
+        padding: 80px;
+      }
+      .flex-container {
+        flex-direction: row;
+        align-items: normal;
+        margin-top: 56px;
+      }
+      .flex-link {
+        margin-right: 56px;
+        margin-bottom: 0px;
+        max-width: 190px;        
+      }
+    }
+
+    @media (min-width: 1024px) {
+      .flex-content {
+        display: flex;
+      }
+      .footer {
+        display: none;
+      }
+      .flex-container {
+        margin-top: 117px;
+      }
+    }
+
+    @media (min-width: 1280px) {
+      
+    }
+
+  </style>
 </head>
 
 <body>
-  <div>Welcome to PayID</div>
+  <div class="app">
+    <svg width="161" height="51" viewBox="0 0 161 51" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M23.3612 40.994C19.8862 40.5308 16.6679 38.9086 14.2246 36.3886L0 21.7746C0.905286 21.626 1.82187 21.5575 2.73913 21.5699C5.23762 21.5847 7.69556 22.2042 9.90382 23.3758C11.2972 24.1206 12.5671 25.0774 13.6682 26.212L18.9147 31.6035C18.9474 31.6376 18.9802 31.6731 19.0142 31.7072C20.6631 33.4022 22.9122 34.3772 25.2737 34.4207C27.6351 34.4642 29.9185 33.5726 31.6283 31.9395L26.1501 37.2968C25.0385 38.3801 24.0981 39.6268 23.3612 40.994Z" fill="url(#paint0_linear)"/>
+      <path d="M36.3039 36.7483L21.7218 51C21.1649 47.5747 21.7406 44.0609 23.3611 40.994C24.098 39.6268 25.0384 38.3801 26.15 37.2969L31.6283 31.9395C32.4882 31.1191 33.177 30.1359 33.6549 29.0466C34.1328 27.9574 34.3903 26.784 34.4123 25.5943C34.4344 24.4046 34.2206 23.2223 33.7834 22.1161C33.3461 21.0098 32.6942 20.0016 31.8653 19.1498L37.2087 24.6397C38.3092 25.7744 39.5786 26.7312 40.9717 27.4759C40.5132 31.007 38.8666 34.2757 36.3039 36.7417V36.7483Z" fill="url(#paint1_linear)"/>
+      <path d="M50.8783 29.0771C47.4901 29.6281 44.0151 29.066 40.9718 27.4746C39.5788 26.7299 38.3093 25.7731 37.2088 24.6384L31.8615 19.1445C31.0387 18.2988 30.0578 17.6237 28.9747 17.158C27.8917 16.6923 26.7277 16.445 25.5493 16.4303C24.3708 16.4155 23.201 16.6336 22.1067 17.0721C21.0124 17.5105 20.015 18.1608 19.1714 18.9857L24.5776 13.7005C25.7305 12.577 26.6995 11.2784 27.449 9.85248C30.9487 10.3014 34.1933 11.9257 36.6537 14.4604L50.8783 29.0771Z" fill="url(#paint2_linear)"/>
+      <path d="M18.9147 31.6035L13.6682 26.212C12.5671 25.0774 11.2972 24.1206 9.90381 23.3758C10.3539 19.9165 11.9448 16.7072 14.4236 14.2583L29.0057 0C29.1541 0.907419 29.2225 1.82618 29.21 2.74562C29.1943 5.22113 28.5906 7.6573 27.4489 9.85247C26.6994 11.2784 25.7304 12.577 24.5775 13.7005L19.1713 18.9857C17.484 20.6334 16.5109 22.8801 16.4619 25.2408C16.4129 27.6015 17.292 29.8869 18.9094 31.6035H18.9147Z" fill="url(#paint3_linear)"/>
+      <path d="M56.4651 13.8567H67.038C73.7523 13.8567 76.7808 17.5879 76.7808 22.6671C76.7808 27.7462 73.7523 31.4814 67.038 31.4814H61.5388V39.8141H56.4716L56.4651 13.8567ZM67.1178 26.7947C70.4842 26.7947 71.6324 25.0505 71.6324 22.6671C71.6324 20.2837 70.4802 18.5815 67.1178 18.5815H61.5388V26.7947H67.1178Z" fill="white"/>
+      <path d="M78.0928 30.2097C78.0928 23.9795 82.4489 19.6905 88.6644 19.6905C94.8182 19.6905 99.0788 23.8562 99.0788 30.1677V39.7944H94.7763V35.9437C93.5862 38.8442 90.9348 40.3102 87.8617 40.3102C83.0866 40.3299 78.0928 36.9189 78.0928 30.2097ZM94.3809 30.0299C94.3809 26.5637 92.0765 24.1147 88.6198 24.1147C85.1632 24.1147 82.8588 26.5637 82.8588 30.0299C82.8588 33.496 85.1946 35.9437 88.6198 35.9437C92.0451 35.9437 94.3809 33.4671 94.3809 30.0299Z" fill="white"/>
+      <path d="M103.002 41.9665H107.715C108.51 43.7921 110.055 44.6242 112.429 44.6242C115.637 44.6242 117.458 43.0834 117.458 39.2668V36.7994C116.27 38.94 114.211 40.091 111.638 40.091C107.123 40.091 102.847 37.1538 102.847 30.1677V20.2115H107.546V30.1729C107.546 33.9042 109.529 35.6917 112.498 35.6917C115.387 35.6917 117.446 33.8281 117.446 30.1729V20.2115H122.16V39.1395C122.16 45.9642 117.839 48.7059 112.417 48.7059C107.872 48.7059 104.108 46.5915 103.002 41.9665Z" fill="white"/>
+      <path d="M127.565 13.8567H132.644V39.8141H127.565V13.8567Z" fill="white"/>
+      <path d="M137.979 13.8567H147.169C156.237 13.8567 161 19.0553 161 26.8367C161 34.6181 156.243 39.8141 147.169 39.8141H137.984L137.979 13.8567ZM147.169 35.1313C153.148 35.1313 155.841 31.8778 155.841 26.8367C155.841 21.7956 153.152 18.5815 147.169 18.5815H143.052V35.1392L147.169 35.1313Z" fill="white"/>
+      <defs>
+      <linearGradient id="paint0_linear" x1="27.3883" y1="38.5892" x2="10.2418" y2="21.1363" gradientUnits="userSpaceOnUse">
+      <stop stop-color="#0044FF"/>
+      <stop offset="0.14" stop-color="#014AFF"/>
+      <stop offset="0.33" stop-color="#025BFF"/>
+      <stop offset="0.54" stop-color="#0577FF"/>
+      <stop offset="0.76" stop-color="#089DFF"/>
+      <stop offset="1" stop-color="#0DCDFF"/>
+      </linearGradient>
+      <linearGradient id="paint1_linear" x1="40.52" y1="21.6102" x2="15.3767" y2="46.1974" gradientUnits="userSpaceOnUse">
+      <stop stop-color="#0BD425"/>
+      <stop offset="0.11" stop-color="#11D527"/>
+      <stop offset="0.27" stop-color="#23DA2C"/>
+      <stop offset="0.45" stop-color="#40E134"/>
+      <stop offset="0.65" stop-color="#68EA40"/>
+      <stop offset="0.87" stop-color="#9BF64F"/>
+      <stop offset="1" stop-color="#BFFF59"/>
+      </linearGradient>
+      <linearGradient id="paint2_linear" x1="22.3482" y1="11.946" x2="47.2611" y2="32.5373" gradientUnits="userSpaceOnUse">
+      <stop stop-color="#FF3F0C"/>
+      <stop offset="0.22" stop-color="#FF4A0E"/>
+      <stop offset="0.61" stop-color="#FF6913"/>
+      <stop offset="1" stop-color="#FF8E1A"/>
+      </linearGradient>
+      <linearGradient id="paint3_linear" x1="9.90381" y1="2.14864" x2="27.7283" y2="-3.30636" gradientUnits="userSpaceOnUse">
+      <stop stop-color="#7A00E6"/>
+      <stop offset="0.19" stop-color="#7E07E8"/>
+      <stop offset="0.47" stop-color="#8819EE"/>
+      <stop offset="0.79" stop-color="#9838F8"/>
+      <stop offset="1" stop-color="#A550FF"/>
+      </linearGradient>
+      </defs>
+    </svg>
+      
+    <h1>
+      Welcome to your <span>PayID App</span>
+    </h1>
+  
+    <div class="flex-container">
+      <div class="flex-content">
+        <div>
+          Here are some guides and resources on how to configure or customize this project.
+        </div>
+        <div>
+          Check us out at <a target="_blank" href="https://payid.org">PayID.org</a> to learn more
+        </div>
+      </div>
+      <a
+        class="flex-link"
+        href="https://docs.payid.org/docs/getting-started"
+        target="_blank"
+        style="background: linear-gradient(90deg, #B766FF 0%, #9F34FF 49.48%, #6C00CC 100%);"
+      >
+        Getting Started with PayID Guide
+      </a>
+      <a
+        class="flex-link"
+        href="https://docs.payid.org"
+        target="_blank"
+        style="background: linear-gradient(180deg, #00CAFF 0%, #0087FF 48.96%, #0044FF 100%);"
+      >
+        Developer Docs
+      </a>
+      <a
+        class="flex-link"
+        href="https://github.com/xpring-eng/payid"
+        target="_blank"
+        style="background: linear-gradient(180deg, #FF8100 0%, #FF8100 0.01%, #FF3600 100%); margin-right:0px; margin-bottom: 0px;"
+      >
+        PayID GitHub Repo
+      </a>
+    </div>
+    <div class="footer">
+      Check us out at <a target="_blank" href="https://payid.org">PayID.org</a> to learn more
+    </div>
+  </div>
 </body>
 </html>
