--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>PayID Server</title>
+  <link rel="icon" href="/favicon.ico">
   <link href='https://fonts.googleapis.com/css?family=Inter:400,700' rel='stylesheet' type='text/css'>
   <style>
     body {
