Fix broken links

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -245,7 +245,7 @@
         </div>
         <a
           class="flex-link"
-          href="https://docs.payid.org/getting-started"
+          href="https://docs.payid.org"
           target="_blank"
           style="
             background: linear-gradient(
@@ -260,7 +260,7 @@
         </a>
         <a
           class="flex-link"
-          href="https://docs.payid.org"
+          href="https://docs.payid.org/payid-overview"
           target="_blank"
           style="
             background: linear-gradient(
