change link text

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -195,7 +195,7 @@
             );
           "
         >
-          Developer Docs
+          Getting Started with PayID Guide
         </a>
         <a
           class="flex-link"
