whoops forgot the main part

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -184,7 +184,7 @@
         </a>
         <a
           class="flex-link"
-          href="https://docs.payid.org/payid-overview"
+          href="https://docs.payid.org/"
           target="_blank"
           style="
             background: linear-gradient(
