Updating html landing page copy / icon (#566)
* updating html landing page copy / icon

* change link text

* whoops forgot the main part

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,13 +24,17 @@
         padding: 40px;
       }
 
+      .app > svg {
+        color: #FFF;
+      }
+
       h1 {
         margin-top: 27px;
         font-size: 40px;
         font-weight: bold;
         line-height: 150%;
         color: #f7fafc;
-        margin-bottom: 0px;
+        margin-bottom: 27px;
       }
 
       h1 > span {
@@ -68,16 +72,12 @@
         text-decoration: none;
         border-radius: 10px;
         font-weight: bold;
-        padding: 123px 25px 102px 25px;
+        padding: 123px 25px;
         color: #fff;
         font-size: 30px;
         margin-right: 0px;
         margin-bottom: 56px;
         width: calc(100% - 50px);
-      }
-
-      .footer {
-        margin-top: 56px;
       }
 
       @media (min-width: 640px) {
@@ -95,6 +95,7 @@
         }
         .flex-container {
           flex-direction: row;
+          justify-content: center;
           align-items: normal;
           margin-top: 56px;
         }
@@ -124,128 +125,51 @@
 
   <body>
     <div class="app">
-      <svg
-        width="161"
-        height="51"
-        viewBox="0 0 161 51"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M23.3612 40.994C19.8862 40.5308 16.6679 38.9086 14.2246 36.3886L0 21.7746C0.905286 21.626 1.82187 21.5575 2.73913 21.5699C5.23762 21.5847 7.69556 22.2042 9.90382 23.3758C11.2972 24.1206 12.5671 25.0774 13.6682 26.212L18.9147 31.6035C18.9474 31.6376 18.9802 31.6731 19.0142 31.7072C20.6631 33.4022 22.9122 34.3772 25.2737 34.4207C27.6351 34.4642 29.9185 33.5726 31.6283 31.9395L26.1501 37.2968C25.0385 38.3801 24.0981 39.6268 23.3612 40.994Z"
-          fill="url(#paint0_linear)"
-        />
-        <path
-          d="M36.3039 36.7483L21.7218 51C21.1649 47.5747 21.7406 44.0609 23.3611 40.994C24.098 39.6268 25.0384 38.3801 26.15 37.2969L31.6283 31.9395C32.4882 31.1191 33.177 30.1359 33.6549 29.0466C34.1328 27.9574 34.3903 26.784 34.4123 25.5943C34.4344 24.4046 34.2206 23.2223 33.7834 22.1161C33.3461 21.0098 32.6942 20.0016 31.8653 19.1498L37.2087 24.6397C38.3092 25.7744 39.5786 26.7312 40.9717 27.4759C40.5132 31.007 38.8666 34.2757 36.3039 36.7417V36.7483Z"
-          fill="url(#paint1_linear)"
-        />
-        <path
-          d="M50.8783 29.0771C47.4901 29.6281 44.0151 29.066 40.9718 27.4746C39.5788 26.7299 38.3093 25.7731 37.2088 24.6384L31.8615 19.1445C31.0387 18.2988 30.0578 17.6237 28.9747 17.158C27.8917 16.6923 26.7277 16.445 25.5493 16.4303C24.3708 16.4155 23.201 16.6336 22.1067 17.0721C21.0124 17.5105 20.015 18.1608 19.1714 18.9857L24.5776 13.7005C25.7305 12.577 26.6995 11.2784 27.449 9.85248C30.9487 10.3014 34.1933 11.9257 36.6537 14.4604L50.8783 29.0771Z"
-          fill="url(#paint2_linear)"
-        />
-        <path
-          d="M18.9147 31.6035L13.6682 26.212C12.5671 25.0774 11.2972 24.1206 9.90381 23.3758C10.3539 19.9165 11.9448 16.7072 14.4236 14.2583L29.0057 0C29.1541 0.907419 29.2225 1.82618 29.21 2.74562C29.1943 5.22113 28.5906 7.6573 27.4489 9.85247C26.6994 11.2784 25.7304 12.577 24.5775 13.7005L19.1713 18.9857C17.484 20.6334 16.5109 22.8801 16.4619 25.2408C16.4129 27.6015 17.292 29.8869 18.9094 31.6035H18.9147Z"
-          fill="url(#paint3_linear)"
-        />
-        <path
-          d="M56.4651 13.8567H67.038C73.7523 13.8567 76.7808 17.5879 76.7808 22.6671C76.7808 27.7462 73.7523 31.4814 67.038 31.4814H61.5388V39.8141H56.4716L56.4651 13.8567ZM67.1178 26.7947C70.4842 26.7947 71.6324 25.0505 71.6324 22.6671C71.6324 20.2837 70.4802 18.5815 67.1178 18.5815H61.5388V26.7947H67.1178Z"
-          fill="white"
-        />
-        <path
-          d="M78.0928 30.2097C78.0928 23.9795 82.4489 19.6905 88.6644 19.6905C94.8182 19.6905 99.0788 23.8562 99.0788 30.1677V39.7944H94.7763V35.9437C93.5862 38.8442 90.9348 40.3102 87.8617 40.3102C83.0866 40.3299 78.0928 36.9189 78.0928 30.2097ZM94.3809 30.0299C94.3809 26.5637 92.0765 24.1147 88.6198 24.1147C85.1632 24.1147 82.8588 26.5637 82.8588 30.0299C82.8588 33.496 85.1946 35.9437 88.6198 35.9437C92.0451 35.9437 94.3809 33.4671 94.3809 30.0299Z"
-          fill="white"
-        />
-        <path
-          d="M103.002 41.9665H107.715C108.51 43.7921 110.055 44.6242 112.429 44.6242C115.637 44.6242 117.458 43.0834 117.458 39.2668V36.7994C116.27 38.94 114.211 40.091 111.638 40.091C107.123 40.091 102.847 37.1538 102.847 30.1677V20.2115H107.546V30.1729C107.546 33.9042 109.529 35.6917 112.498 35.6917C115.387 35.6917 117.446 33.8281 117.446 30.1729V20.2115H122.16V39.1395C122.16 45.9642 117.839 48.7059 112.417 48.7059C107.872 48.7059 104.108 46.5915 103.002 41.9665Z"
-          fill="white"
-        />
-        <path
-          d="M127.565 13.8567H132.644V39.8141H127.565V13.8567Z"
-          fill="white"
-        />
-        <path
-          d="M137.979 13.8567H147.169C156.237 13.8567 161 19.0553 161 26.8367C161 34.6181 156.243 39.8141 147.169 39.8141H137.984L137.979 13.8567ZM147.169 35.1313C153.148 35.1313 155.841 31.8778 155.841 26.8367C155.841 21.7956 153.152 18.5815 147.169 18.5815H143.052V35.1392L147.169 35.1313Z"
-          fill="white"
-        />
+      <svg viewBox="0 0 130 42" width="130" height="42" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M45.5989 11.1926H54.1309C59.5546 11.1926 61.9969 14.2028 61.9969 18.3046C61.9969 22.4065 59.5546 25.4272 54.1309 25.4272H49.6904V32.1576H45.5989V11.1926ZM54.1943 21.6433C56.9115 21.6433 57.8419 20.2337 57.8419 18.3046C57.8419 16.3756 56.9115 15.0083 54.1943 15.0083H49.6904V21.6433H54.1943Z" fill="currentColor"/>
+        <path d="M63.0544 24.3992C63.0544 19.3646 66.5751 15.8987 71.5865 15.8987C76.545 15.8987 79.9916 19.2586 79.9916 24.3568V32.1365H76.5133V29.031C75.5512 31.3734 73.4155 32.5605 70.931 32.5605C67.0932 32.5711 63.0544 29.8153 63.0544 24.3992ZM76.2067 24.2508C76.2067 21.4526 74.3459 19.4706 71.5548 19.4706C68.7636 19.4706 66.9028 21.4526 66.9028 24.2508C66.9028 27.0489 68.7848 29.031 71.5548 29.031C74.3248 29.031 76.2067 27.0277 76.2067 24.2508Z" fill="currentColor"/>
+        <path d="M83.1743 33.8958H86.9804C87.6253 35.3691 88.8729 36.0368 90.7865 36.0368C93.3768 36.0368 94.8464 34.7967 94.8464 31.7124V29.7198C93.8843 31.4474 92.2244 32.3801 90.1522 32.3801C86.5046 32.3801 83.058 30.0059 83.058 24.3672V16.3225H86.8535V24.3672C86.8535 27.3774 88.45 28.8188 90.85 28.8188C93.1865 28.8188 94.8464 27.3138 94.8464 24.3672V16.3225H98.6525V31.617C98.6525 37.1285 95.1636 39.3438 90.7865 39.3438C87.1073 39.3332 84.0624 37.6267 83.1743 33.8958Z" fill="currentColor"/>
+        <path d="M103.008 11.1926H107.11V32.1576H103.008V11.1926Z" fill="currentColor"/>
+        <path d="M111.414 11.1926H118.835C126.152 11.1926 130 15.3899 130 21.6751C130 27.9604 126.162 32.1576 118.835 32.1576H111.414V11.1926ZM118.835 28.3738C123.667 28.3738 125.834 25.7452 125.834 21.6751C125.834 17.6051 123.667 15.0083 118.835 15.0083H115.516V28.3844L118.835 28.3738Z" fill="currentColor"/>
+        <path d="M22.2181 33.0207C25.0237 32.6479 27.6221 31.3415 29.5948 29.312L41.08 17.5401C40.3489 17.4202 39.6087 17.3648 38.8679 17.3743C36.85 17.3865 34.865 17.8855 33.0812 18.8289C31.9564 19.4297 30.9312 20.2007 30.0419 21.1146L25.8058 25.4546C25.7808 25.4822 25.7532 25.5099 25.7256 25.5388C24.3942 26.904 22.5781 27.6892 20.6714 27.7239C18.7648 27.7586 16.9213 27.0401 15.5411 25.7242L19.9652 30.0405C20.8627 30.9141 21.6224 31.919 22.2181 33.0207Z" fill="url(#logo-paint0_linear)"/>
+        <path d="M11.7676 29.591L23.5409 41.0762C23.9899 38.3169 23.5253 35.4865 22.2178 33.0156C21.6223 31.9149 20.8631 30.911 19.9663 30.0381L15.5421 25.7218C14.8478 25.061 14.2915 24.2689 13.9056 23.3915C13.5197 22.5141 13.3118 21.5689 13.2939 20.6105C13.2761 19.6521 13.4486 18.6998 13.8016 17.8086C14.1545 16.9174 14.6809 16.1052 15.3501 15.4189L11.0364 19.8418C10.1474 20.7557 9.12211 21.5263 7.99711 22.1262C8.36718 24.9713 9.69737 27.6047 11.7676 29.591Z" fill="url(#logo-paint1_linear)"/>
+        <path d="M-9.91821e-05 23.4228C0.730669 23.5415 1.47037 23.5965 2.21067 23.5872C4.22853 23.574 6.21349 23.0746 7.99732 22.1313C9.12232 21.5314 10.1476 20.7608 11.0366 19.8469L15.3543 15.4214C16.0182 14.7396 16.81 14.1953 17.6844 13.8197C18.5587 13.444 19.4986 13.2444 20.4502 13.2322C21.4017 13.22 22.3464 13.3954 23.2302 13.7485C24.1139 14.1016 24.9194 14.6254 25.6006 15.2899L21.2356 11.0314C20.3046 10.1265 19.5221 9.08035 18.917 7.93164C16.0922 8.2957 13.474 9.60573 11.489 11.6483L-9.91821e-05 23.4228Z" fill="url(#logo-paint2_linear)"/>
+        <path d="M25.8071 25.4573L30.0432 21.1173C30.9325 20.2034 31.9577 19.4324 33.0825 18.8316C32.7206 16.0442 31.4363 13.4581 29.4343 11.4852L17.6598 0C17.5403 0.730684 17.4853 1.47045 17.4954 2.21077C17.508 4.20485 17.9954 6.16726 18.917 7.93561C19.5222 9.08431 20.3047 10.1304 21.2357 11.0354L25.6006 15.2939C26.9621 16.6218 27.7469 18.4318 27.7855 20.3333C27.8241 22.2348 27.1135 24.0752 25.8071 25.4573Z" fill="url(#logo-paint3_linear)"/>
         <defs>
-          <linearGradient
-            id="paint0_linear"
-            x1="27.3883"
-            y1="38.5892"
-            x2="10.2418"
-            y2="21.1363"
-            gradientUnits="userSpaceOnUse"
-          >
-            <stop stop-color="#0044FF" />
-            <stop offset="0.14" stop-color="#014AFF" />
-            <stop offset="0.33" stop-color="#025BFF" />
-            <stop offset="0.54" stop-color="#0577FF" />
-            <stop offset="0.76" stop-color="#089DFF" />
-            <stop offset="1" stop-color="#0DCDFF" />
-          </linearGradient>
-          <linearGradient
-            id="paint1_linear"
-            x1="40.52"
-            y1="21.6102"
-            x2="15.3767"
-            y2="46.1974"
-            gradientUnits="userSpaceOnUse"
-          >
-            <stop stop-color="#0BD425" />
-            <stop offset="0.11" stop-color="#11D527" />
-            <stop offset="0.27" stop-color="#23DA2C" />
-            <stop offset="0.45" stop-color="#40E134" />
-            <stop offset="0.65" stop-color="#68EA40" />
-            <stop offset="0.87" stop-color="#9BF64F" />
-            <stop offset="1" stop-color="#BFFF59" />
-          </linearGradient>
-          <linearGradient
-            id="paint2_linear"
-            x1="22.3482"
-            y1="11.946"
-            x2="47.2611"
-            y2="32.5373"
-            gradientUnits="userSpaceOnUse"
-          >
-            <stop stop-color="#FF3F0C" />
-            <stop offset="0.22" stop-color="#FF4A0E" />
-            <stop offset="0.61" stop-color="#FF6913" />
-            <stop offset="1" stop-color="#FF8E1A" />
-          </linearGradient>
-          <linearGradient
-            id="paint3_linear"
-            x1="9.90381"
-            y1="2.14864"
-            x2="27.7283"
-            y2="-3.30636"
-            gradientUnits="userSpaceOnUse"
-          >
-            <stop stop-color="#7A00E6" />
-            <stop offset="0.19" stop-color="#7E07E8" />
-            <stop offset="0.47" stop-color="#8819EE" />
-            <stop offset="0.79" stop-color="#9838F8" />
-            <stop offset="1" stop-color="#A550FF" />
-          </linearGradient>
+        <linearGradient id="logo-paint0_linear" x1="42.2341" y1="12.4112" x2="22.5505" y2="25.781" gradientUnits="userSpaceOnUse">
+        <stop stop-color="#C906F9"/>
+        <stop offset="0.448312" stop-color="#A803FC"/>
+        <stop offset="0.862484" stop-color="#8700FF"/>
+        </linearGradient>
+        <linearGradient id="logo-paint1_linear" x1="10.5569" y1="20.2095" x2="5.77082" y2="38.2556" gradientUnits="userSpaceOnUse">
+        <stop stop-color="#0044FF"/>
+        <stop offset="0.489583" stop-color="#0087FF"/>
+        <stop offset="1" stop-color="#00CAFF"/>
+        </linearGradient>
+        <linearGradient id="logo-paint2_linear" x1="-0.0447044" y1="23.9803" x2="9.75159" y2="26.9571" gradientUnits="userSpaceOnUse">
+        <stop stop-color="#B0FF33"/>
+        <stop offset="0.494792" stop-color="#55DF20"/>
+        <stop offset="1" stop-color="#0AC222"/>
+        </linearGradient>
+        <linearGradient id="logo-paint3_linear" x1="17.5422" y1="25.3108" x2="34.1105" y2="21.3758" gradientUnits="userSpaceOnUse">
+        <stop stop-color="#FF8100"/>
+        <stop offset="0.0001" stop-color="#FF8100"/>
+        <stop offset="0.5" stop-color="#FF5D00"/>
+        <stop offset="1" stop-color="#FF3600"/>
+        </linearGradient>
         </defs>
       </svg>
+        
 
       <h1>Welcome to your <span>PayID App</span></h1>
-
+      <div>
+        Here are some guides and resources on how to configure or customize
+        this project.
+      </div>
       <div class="flex-container">
-        <div class="flex-content">
-          <div>
-            Here are some guides and resources on how to configure or customize
-            this project.
-          </div>
-          <div>
-            Check us out at
-            <a target="_blank" href="https://payid.org">PayID.org</a> to learn
-            more
-          </div>
-        </div>
         <a
           class="flex-link"
-          href="https://docs.payid.org"
+          href="https://payid.org"
           target="_blank"
           style="
             background: linear-gradient(
@@ -256,11 +180,11 @@
             );
           "
         >
-          Getting Started with PayID Guide
+          Learn more at PayID.org
         </a>
         <a
           class="flex-link"
-          href="https://docs.payid.org/payid-overview"
+          href="https://docs.payid.org/"
           target="_blank"
           style="
             background: linear-gradient(
@@ -271,7 +195,7 @@
             );
           "
         >
-          Developer Docs
+          Getting Started with PayID Guide
         </a>
         <a
           class="flex-link"
@@ -290,10 +214,6 @@
         >
           PayID GitHub Repo
         </a>
-      </div>
-      <div class="footer">
-        Check us out at
-        <a target="_blank" href="https://payid.org">PayID.org</a> to learn more
       </div>
     </div>
   </body>
